{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 167,
  "lineage": "23804810-c217-bb77-0623-851a27f20c68",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034f10b7ffb207ab9",
            "arn": "arn:aws:ec2:us-west-1:005913962162:instance/i-002b89fd5651584a1",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-002b89fd5651584a1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-us-west-1-cxp-bruesd",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03fa09c26dad51822",
            "private_dns": "ip-10-47-0-236.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.47.0.236",
            "public_dns": "ec2-18-144-25-209.us-west-1.compute.amazonaws.com",
            "public_ip": "18.144.25.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf356197950a70fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a1805e584c8173d6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-048c9e407cdf0816b",
            "tags": {
              "CostCenter": "1234567890",
              "Department": "bridge",
              "ManagedBy": "Terraform",
              "Name": "starbase-80",
              "Organization": "starfleet",
              "Stage": "production",
              "TrainingSession": "2023-02-24",
              "solution": "cxp-starfleet"
            },
            "tags_all": {
              "CostCenter": "1234567890",
              "Department": "bridge",
              "ManagedBy": "Terraform",
              "Name": "starbase-80",
              "Organization": "starfleet",
              "Stage": "production",
              "TrainingSession": "2023-02-24",
              "solution": "cxp-starfleet"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1805e584c8173d6"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_security_group.sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:005913962162:internet-gateway/igw-095eb8ccf0d56d097",
            "id": "igw-095eb8ccf0d56d097",
            "owner_id": "005913962162",
            "tags": {
              "CostCenter": "1234567890",
              "Department": "bridge",
              "ManagedBy": "Terraform",
              "Name": "igw-us-west-1-cxp-starfleet",
              "Organization": "starfleet",
              "Stage": "production",
              "TrainingSession": "2023-02-24",
              "solution": "cxp-starfleet"
            },
            "tags_all": {
              "CostCenter": "1234567890",
              "Department": "bridge",
              "ManagedBy": "Terraform",
              "Name": "igw-us-west-1-cxp-starfleet",
              "Organization": "starfleet",
              "Stage": "production",
              "TrainingSession": "2023-02-24",
              "solution": "cxp-starfleet"
            },
            "vpc_id": "vpc-0cce85534647cad0d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a7744311546e7b3",
            "original_route_table_id": "rtb-080de6ed6d3cebad7",
            "route_table_id": "rtb-08362fc91472d9063",
            "vpc_id": "vpc-0cce85534647cad0d"
          },
          "dependencies": [
            "aws_route_table.route_table",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-095eb8ccf0d56d097",
            "id": "r-rtb-08362fc91472d90631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08362fc91472d9063",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:005913962162:route-table/rtb-08362fc91472d9063",
            "id": "rtb-08362fc91472d9063",
            "owner_id": "005913962162",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CostCenter": "1234567890",
              "Department": "bridge",
              "ManagedBy": "Terraform",
              "Name": "Route Table",
              "Organization": "starfleet",
              "Stage": "production",
              "TrainingSession": "2023-02-24",
              "solution": "cxp-starfleet"
            },
            "tags_all": {
              "CostCenter": "1234567890",
              "Department": "bridge",
              "ManagedBy": "Terraform",
              "Name": "Route Table",
              "Organization": "starfleet",
              "Stage": "production",
              "TrainingSession": "2023-02-24",
              "solution": "cxp-starfleet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cce85534647cad0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee2fa2ca9159ef8e",
            "route_table_id": "rtb-08362fc91472d9063",
            "subnet_id": "subnet-048c9e407cdf0816b"
          },
          "dependencies": [
            "aws_route_table.route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04907c67cabb73d2c",
            "route_table_id": "rtb-08362fc91472d9063",
            "subnet_id": "subnet-02f4c87072e2b5529"
          },
          "dependencies": [
            "aws_route_table.route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:005913962162:security-group/sg-0a1805e584c8173d6",
            "description": "Starfleet Terraform Homework",
            "egress": [],
            "id": "sg-0a1805e584c8173d6",
            "ingress": [],
            "name": "starfleet-security-group",
            "name_prefix": "",
            "owner_id": "005913962162",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cce85534647cad0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1535864620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a1805e584c8173d6",
            "security_group_rule_id": "sgr-0fa39a8d526b2f848",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1109339678",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a1805e584c8173d6",
            "security_group_rule_id": "sgr-0e32ed7f713131a31",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3976278681",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a1805e584c8173d6",
            "security_group_rule_id": "sgr-0669b5d5fd333234f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1824530547",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a1805e584c8173d6",
            "security_group_rule_id": "sgr-0300bd0a317b07571",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:005913962162:subnet/subnet-048c9e407cdf0816b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.47.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048c9e407cdf0816b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "005913962162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "1234567890",
              "Department": "bridge",
              "ManagedBy": "Terraform",
              "Name": "sn-us-west-1a-cxp-starfleet-public-public",
              "Organization": "starfleet",
              "Stage": "production",
              "TrainingSession": "2023-02-24",
              "solution": "cxp-starfleet"
            },
            "tags_all": {
              "CostCenter": "1234567890",
              "Department": "bridge",
              "ManagedBy": "Terraform",
              "Name": "sn-us-west-1a-cxp-starfleet-public-public",
              "Organization": "starfleet",
              "Stage": "production",
              "TrainingSession": "2023-02-24",
              "solution": "cxp-starfleet"
            },
            "vpc_id": "vpc-0cce85534647cad0d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:005913962162:subnet/subnet-02f4c87072e2b5529",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.47.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f4c87072e2b5529",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "005913962162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "1234567890",
              "Department": "bridge",
              "ManagedBy": "Terraform",
              "Name": "sn-us-west-1b-cxp-starfleet-public-public",
              "Organization": "starfleet",
              "Stage": "production",
              "TrainingSession": "2023-02-24",
              "solution": "cxp-starfleet"
            },
            "tags_all": {
              "CostCenter": "1234567890",
              "Department": "bridge",
              "ManagedBy": "Terraform",
              "Name": "sn-us-west-1b-cxp-starfleet-public-public",
              "Organization": "starfleet",
              "Stage": "production",
              "TrainingSession": "2023-02-24",
              "solution": "cxp-starfleet"
            },
            "vpc_id": "vpc-0cce85534647cad0d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:005913962162:vpc/vpc-0cce85534647cad0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.47.0.0/16",
            "default_network_acl_id": "acl-0f6c6230bdef8ab22",
            "default_route_table_id": "rtb-080de6ed6d3cebad7",
            "default_security_group_id": "sg-09823a93b62a72b5b",
            "dhcp_options_id": "dopt-416f7126",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cce85534647cad0d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-080de6ed6d3cebad7",
            "owner_id": "005913962162",
            "tags": {
              "CostCenter": "1234567890",
              "Department": "bridge",
              "ManagedBy": "Terraform",
              "Name": "vpc-us-west-1-cxp-starfleet-public",
              "Organization": "starfleet",
              "Stage": "production",
              "TrainingSession": "2023-02-24",
              "solution": "cxp-starfleet"
            },
            "tags_all": {
              "CostCenter": "1234567890",
              "Department": "bridge",
              "ManagedBy": "Terraform",
              "Name": "vpc-us-west-1-cxp-starfleet-public",
              "Organization": "starfleet",
              "Stage": "production",
              "TrainingSession": "2023-02-24",
              "solution": "cxp-starfleet"
            }
          }
        }
      ]
    }
  ]
}